# task-management-system

./: .dockerignore  .env.example  .gitignore  ENGINEERING_DECISIONS.md  README.md  pyproject.toml
base/: models.py  views.py
cfg/: celery.py  settings.py  urls.py
docker/: Dockerfile  compose.dev.yaml  compose.prod.yaml
docs/: learning.docx  task.docx
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/api/: client.js  endpoints.js
logs/: apps.py  models.py  serializers.py  urls.py  views.py
logs/migrations/: 0001_initial.py
nginx/: nginx.dev.conf  nginx.prod.conf
projects/: models.py  serializers.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_alter_project_options.py  0003_alter_project_options.py
tasks/: admin.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_task_priority.py  0003_alter_comment_options_alter_task_options_and_more.py
teams/: admin.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
teams/migrations/: 0001_initial.py  0002_initial.py  0003_alter_membership_role_invitation.py  0003_membership_unique_user_team_membership.py  0003_remove_invitation_unique_team_receiver_role_invite_and_more.py  0004_alter_invitation_expires_at_and_more.py  0004_remove_invitation_invite_sender_not_receiver_and_more.py  0005_invitation_teams_invit_receive_bc473d_idx.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
(+30 files in other folders)
